Fix: firefox scrollbar
firefox scrollbar

--- a/ch5-button-list/scss/_button-list-default.scss
+++ b/ch5-button-list/scss/_button-list-default.scss
@@ -20,6 +20,7 @@
   user-select: none;
   display: grid;
   height: auto;
+  scrollbar-width: none; // needed to hide the firefox scrollbar 
 
   &.active {
     cursor: -webkit-grabbing;
